--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "aos": "3.0.0-beta.6",
+    "dotenv": "^16.5.0",
     "next": "^15.1.6",
+    "nodemailer": "^6.10.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "typescript": "^5.7.3"
@@ -23,6 +25,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.3",
     "@types/aos": "^3.0.7",
+    "@types/nodemailer": "^6.4.17",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3"
   }
